# Quake-for-Quake-III

./: .gitignore  .gitmodules  CMakeLists.txt  Quakewad.txt  README.md  TODO list.txt  compile_maps.py  convert_models.py  convert_pictures.py  extract_and_convert_textures.py  particle.tga  q3config.cfg  shaders.py
BspcLib/: BspcLibIncludes.hpp  CMakeLists.txt  CommonFuncs.c
DePAKer/: main.cpp
GameVM/: CMakeLists.txt
GameVM/cgame/: cg_ent.c  cg_local.h  cg_servercmds.c  cg_snapshot.c  cg_view.c  sbar.c  sbar.h
GameVM/code/cgame/: cg_blend.c  cg_consolecmds.c  cg_dlight.c  cg_draw.c  cg_effects.c  cg_ent.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_servercmds.c  cg_snapshot.c  cg_view.c  cg_weapon.c  cg_weapons.c  q_client.h  r_part.c  sbar.c  sbar.h
GameVM/code/game/: bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  common.c  common.h  g_active.c  g_arenas.c  g_client.c  g_cmds.c  g_combat.c  g_filebuf.c  g_items.c  g_local.h  g_main.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_save_load.c  g_spawn.c  g_svcmds.c  g_target.c  g_team.c  g_trigger.c  g_utils.c  g_weapon.c  host.c  pr_cmds.c  pr_comp.h  pr_edict.c  pr_exec.c  progdefs.h  progs.h  protocol.h  quakedef.h  server.h  sv_main.c  sv_move.c  sv_phys.c  (+3 more)
GameVM/code/q3_ui/: menu.c  menu.h  ui_atoms.c  ui_local.h  ui_main.c  ui_menu.c  ui_servers2.c  ui_setup.c
GameVM/code/ui/: ui_local.h
GameVM/game/: common.h  g_client.c  g_local.h  g_main.c  g_utils.c  pr_cmds.c  pr_exec.c  progdefs.h  progs.h  protocol.h  sv_main.c  view.c  world.c  world.h
GameVM/q3_ui/: menu.c
GameVM/ui/: ui_shared.h
MapConverter/: CMakeLists.txt  main.cpp
Q1PicToTga/: main.cpp
Tools/: CMakeLists.txt  cxx_common.cmake
Tools/BspcLib/: BspcLibIncludes.hpp  CMakeLists.txt  CommonFuncs.c
Tools/DePAKer/: CMakeLists.txt
Tools/MapConverter/: main.cpp
Tools/Q1LmpPicToTga/: CMakeLists.txt  main.cpp
Tools/Q1PicToTga/: CMakeLists.txt  main.cpp
Tools/SpriteConverter/: CMakeLists.txt  main.cpp
Tools/WadExtractor/: main.cpp
Tools/q3map/: CMakeLists.txt  stuff.c
Tools/qwalk/: Makefile.am  TODO  anorms.h  global.h  image.h  image_jpeg.c  image_pcx.c  image_tga.c  model.c  model_md2.c  model_md3.c  model_mdo.c  modelconv.c  palettes.c  palettes.h  util.h
Tools/qwalk/config.d/: result.m4
WadExtractor/: CMakeLists.txt  main.cpp
export_scripts/: compile_maps.py  convert_models.py  convert_sprites.py  shaders.py
q3map/: CMakeLists.txt
quake_for_quake3_gfx/: fullscreen_blend.tga
qwalk/: .gitignore  CMakeLists.txt  anorms.c  configure.ac  global.h  image.c  image.h  matrix.c  matrix.h  model.c  model.h  model_md3.c  model_mdl.c  model_q1bsp.c  modelconv.c  modelconv.sln  modelconv.vcproj  util.c  v_font.c  v_font.h  viewer.c  viewer.vcproj
qwalk/config.d/: build_control.m4  compiling.m4
scripts/: common.shader  missing_liquids.shader  quake_for_quake3.shader  quake_for_quake3_gfx.shader  skies.shader
