cmake_minimum_required(VERSION 3.10)

project(Quake-for-Quake-III)

add_subdirectory(BspcLib)
add_subdirectory(MapConverter)
add_subdirectory(WadExtractor)
add_subdirectory(Q1PicToTga)
add_subdirectory(Q1LmpPicToTga)
add_subdirectory(GameVM)
add_subdirectory(q3map)
add_subdirectory(qwalk)
add_subdirectory(DePAKer)
